first implementation of ByNativeCellsSearcher